--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^5.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.2"
@@ -26,7 +27,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "trans:extract": "formatjs extract ./src/**/*.tsx --out-file ./src/translations/source.json",
+    "trans:compile_ru": "formatjs compile ./src/translations/source.json --format ./src/translations/compile_ru.js --out-file ./src/translations/ru.json",
+    "trans:compile_en": "formatjs compile ./src/translations/source.json --format ./src/translations/compile_en.js --out-file ./src/translations/en.json",
+    "trans": "yarn trans:extract; yarn trans:compile_ru; yarn trans:compile_en"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@formatjs/cli": "^2.13.3",
     "@types/react-router-dom": "^5.1.5",
     "gh-pages": "^3.1.0"
   }
