--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Ivansultan.github.io",
+  "homepage": "https://Ivansultan.github.io/rr",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
